--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Projectiles/projectiles.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Projectiles/projectiles.yml
@@ -496,12 +496,13 @@
     impactEffect: BulletImpactEffectKinetic
     damage:
       types:
-        Blunt: 15
-        Structural: 30
+        Blunt: 40 # DeltaV - 15 -> 40
+        #Structural: 30 # DeltaV
   # Short lifespan
   - type: TimedDespawn
     lifetime: 0.22 # roughly 5.5 tiles
   - type: GatheringProjectile
+  - type: PressureProjectile # DeltaV
 
 - type: entity
   id: BulletKineticShuttle
@@ -529,6 +530,7 @@
     color: white
     energy: 0.5
   - type: GatheringProjectile
+  - type: PressureProjectile # DeltaV
 
 - type: entity
   id: BulletCharge
