--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Basic/base_pka.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Basic/base_pka.yml
@@ -15,7 +15,7 @@
     maxAngle: -43
   - type: Wieldable
   - type: Gun
-    fireRate: 0.8 # DeltaV - 1.25s recharge time, less than ss13's 1.6 seconds to compensate for no dual wielding
+    fireRate: 0.8 # DeltaV - 0.5 -> 0.8 | 1.25s recharge time, less than ss13's 1.6 seconds to compensate for no dual wielding
     selectedMode: SemiAuto
     angleDecay: 45
     minAngle: 44
