fuck my stupid life i forgot this

--- a/Resources/Prototypes/_DV/Catalog/uplink_catalog.yml
+++ b/Resources/Prototypes/_DV/Catalog/uplink_catalog.yml
@@ -47,6 +47,7 @@
   categories:
   - UplinkObjectives
   conditions:
+# - !type:ObjectiveUnlockCondition # Harmony
   - !type:ListingLimitedStockCondition
     stock: 1
   - !type:BuyerWhitelistCondition
