--- a/Resources/Prototypes/Guidebook/species.yml
+++ b/Resources/Prototypes/Guidebook/species.yml
@@ -11,6 +11,7 @@
     - Reptilian
     - SlimePerson
     - Vox
+    - Avali # harmony
 
 - type: guideEntry
   id: Arachnid
@@ -51,3 +52,10 @@
   id: Vox
   name: species-name-vox
   text: "/ServerInfo/Guidebook/Mobs/Vox.xml"
+
+# Harmony change start
+- type: guideEntry
+  id: Avali
+  name: species-name-avali
+  text: "/ServerInfo/_Harmony/Guidebook/Mobs/Avali.xml"
+# Harmony change end
