--- a/Resources/Prototypes/Reagents/elements.yml
+++ b/Resources/Prototypes/Reagents/elements.yml
@@ -167,33 +167,35 @@
       effects:
       - !type:HealthChange
         conditions:
-        # start harmony change
-        - !type:OrganType
-          type: Avali
-          shouldHave: true
-        # end harmony change
         - !type:OrganType
           type: Arachnid
           shouldHave: true
         damage:
           types:
             Poison: 0.1
+      # start harmony change
+      - !type:HealthChange
+        conditions:
+        - !type:OrganType
+          type: Avali
+          shouldHave: true
+        damage:
+          types:
+            Poison: 0.1
+    # end harmony change
     Medicine:
       effects:
       - !type:ModifyBloodLevel
         conditions:
+        # start harmony change
+        - !type:OrganType
+          type: Avali
+          shouldHave: false
+        # end harmony change
         - !type:OrganType
           type: Arachnid
           shouldHave: false
         amount: 0.4
-# start harmony change
-      - !type:ModifyBloodLevel
-        conditions:
-        - !type:OrganType
-          type: Avali
-          shouldHave: false
-        amount: 0.4
-# end harmony change
 
 - type: reagent
   id: Lithium
