Just balance + "fixes" range bug

--- a/Resources/Prototypes/Entities/Objects/Tools/pka_upgrade.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/pka_upgrade.yml
@@ -57,11 +57,9 @@
   - type: GunUpgrade
     #tags: [ GunUpgradeRange ] # DeltaV - allow multiple
     examineText: gun-upgrade-examine-text-range
+  - type: GunUpgradeSpeed
+    coefficient: 1.5
 # Start harmony change - deltav PKA port
-# - type: GunUpgradeSpeed
-#   coefficient: 1.5
-  - type: GunUpgradeRange # DeltaV - actually change range not speed
-    coefficient: 1.25 # DeltaV - was 1.5, more in line with ss13
   - type: GunUpgradeCost # DeltaV
     cost: 25
 # End harmony change
