--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Basic/base_pka.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Basic/base_pka.yml
@@ -15,7 +15,7 @@
     maxAngle: -43
   - type: Wieldable
   - type: Gun
-    fireRate: 0.8 # DeltaV - 0.5 -> 0.8 | 1.25s recharge time, less than ss13's 1.6 seconds to compensate for no dual wielding
+    fireRate: 0.5
     selectedMode: SemiAuto
     angleDecay: 45
     minAngle: 44
@@ -34,7 +34,7 @@
           False: { visible: True }
         #todo: add other 'empty' animations
   - type: RechargeBasicEntityAmmo
-    rechargeCooldown: 0.5 # DeltaV 0.75 -> 0.5
+    rechargeCooldown: 0.75
     rechargeSound:
       path: /Audio/Weapons/Guns/MagIn/kinetic_reload.ogg
   - type: BasicEntityAmmoProvider
