--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Projectiles/projectiles.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Projectiles/projectiles.yml
@@ -496,8 +496,8 @@
     impactEffect: BulletImpactEffectKinetic
     damage:
       types:
-        Blunt: 40 # DeltaV - 15 -> 40
-        #Structural: 30 # DeltaV
+        Blunt: 30 # Harmony change- DeltaV PKA Rework - 15 -> 30
+        Structural: 30
   # Short lifespan
   - type: TimedDespawn
     lifetime: 0.22 # roughly 5.5 tiles
