--- a/Resources/Prototypes/_DV/Entities/Objects/Tools/pka_ugrade.yml
+++ b/Resources/Prototypes/_DV/Entities/Objects/Tools/pka_ugrade.yml
@@ -2,7 +2,7 @@
   parent: BasePKAUpgrade
   id: PKAUpgradeIndoors
   name: PKA modkit (indoors)
-  suffix: Harmony
+  suffix: Harmony # harmony - added suffix
   description: A syndicate modification kit that increases the damage a kinetic accelerator does in high pressure environments.
   components:
   - type: Sprite
