fixed pka clipping
Co-authored-by: Bones <150093917+CollectionOfBones128@users.noreply.github.com>
Signed-off-by: halycon <104782767+kleinerstation13@users.noreply.github.com>

--- a/Resources/Prototypes/Entities/Objects/Tools/pka_upgrade.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/pka_upgrade.yml
@@ -58,7 +58,7 @@
     #tags: [ GunUpgradeRange ] # DeltaV - allow multiple
     examineText: gun-upgrade-examine-text-range
   - type: GunUpgradeSpeed
-    coefficient: 1.5
+    coefficient: 1.4 # Harmony - 1.5 > 1.4 - Prevents clipping at max stacks
 # Start harmony change - deltav PKA port
   - type: GunUpgradeCost # DeltaV
     cost: 25
