--- a/Resources/Prototypes/Catalog/Fills/Backpacks/duffelbag.yml
+++ b/Resources/Prototypes/Catalog/Fills/Backpacks/duffelbag.yml
@@ -136,8 +136,10 @@
         amount: 4
       - id: MagazineShotgun
         amount: 4
-      - id: MagazineRifle
-        amount: 3
+    # Begin harmony change - removes estoc from uplink
+#      - id: MagazineRifle
+#        amount: 3
+    # End harmony change
       - id: MagazineShotgunSlug
         amount: 1
       - id: MagazineLightRifleBox
