--- a/Resources/Audio/_Harmony/Weapons/Guns/Gunshots/attributions.yml
+++ b/Resources/Audio/_Harmony/Weapons/Guns/Gunshots/attributions.yml
@@ -17,3 +17,8 @@
   license: "Custom"
   copyright: "Halo © Microsoft Corporation. This audio file was created under Microsoft's Game Content Usage Rules using assets from Halo:Reach, and it is not endorsed by or affiliated with Microsoft. More info here: https://www.xbox.com/en-us/developers/rules. Pulled from Halo:Reach, made by Bungie"
   source: "https://youtu.be/0SEE9n-ciUc"
+
+- files: ["guitar_shoot.ogg"]
+  license: "Custom"
+  copyright: "Created as User Generated Content based on Counter Strike: Online (Created by Nexon) under the Nexon Game IP guide. https://playersupport.nexon.com/hc/en-us/articles/360059079812-Nexon-Game-IP-Guide-for-Content-Creators"
+  source: "https://youtu.be/apho-Z4wkAw"
