--- a/Resources/Audio/_Harmony/Weapons/attributions.yml
+++ b/Resources/Audio/_Harmony/Weapons/attributions.yml
@@ -2,3 +2,8 @@
   license: "CC0-1.0"
   copyright: "Created by The-Sacha-Rush"
   source: "https://freesound.org/people/The-Sacha-Rush"
+
+- files: ["guitar_draw.ogg"]
+  license: "Custom"
+  copyright: "Created as User Generated Content based on Counter Strike: Online (Created by Nexon) under the Nexon Game IP guide. https://playersupport.nexon.com/hc/en-us/articles/360059079812-Nexon-Game-IP-Guide-for-Content-Creators"
+  source: "https://youtu.be/apho-Z4wkAw"
