--- a/Resources/Prototypes/_Harmony/Catalog/uplink_catalog.yml
+++ b/Resources/Prototypes/_Harmony/Catalog/uplink_catalog.yml
@@ -90,7 +90,7 @@
     whitelist:
       components:
       - SurplusBundle
-  
+
 - type: listing
   id: UplinkX4
   name: uplink-X4-name
@@ -296,3 +296,17 @@
     whitelist:
     - Bartender
     - Zookeeper
+
+- type: listing
+  id: UplinkRifleGattar
+  name: uplink-rifle-gattar-name
+  description: uplink-rifle-gattar-desc
+  productEntity: GattarCaseSyndicateFilledGattar
+  icon: { sprite: /Textures/_Harmony/Objects/Weapons/Guns/Rifles/gattar.rsi, state: icon }
+  discountCategory: rareDiscounts
+  discountDownTo:
+    Telecrystal: 12
+  cost:
+    Telecrystal: 16
+  categories:
+  - UplinkJob
