Fixes RSC attributions

--- a/Resources/Audio/_Harmony/Items/attributions.yml
+++ b/Resources/Audio/_Harmony/Items/attributions.yml
@@ -1,4 +1,4 @@
-- files: ["rsc_eject.ogg"]
+- files: ["rsc_speedloader_impact.ogg"]
   license: "CC-BY-SA-3.0"
   copyright: "Recorded by spanky-spanky (GitHub) and edited by Nonagon44 (GitHub)"
   source: "https://github.com/ss14-harmony/ss14-harmony/pull/644"
