--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/posters.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/posters.yml
@@ -172,6 +172,7 @@
       - PosterHarmonyMuhrinePropaganda # Harmony
       - PosterHarmonyMaintsSlasher # Harmony
       - PosterHarmonyDoNotGamble # Harmony
+      - PosterHarmonyArnold # Harmony
       - PosterLegitSafetyMothDelam
       - PosterLegitSafetyMothEpi
       - PosterLegitSafetyMothPiping
