--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Launchers/launchers.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Launchers/launchers.yml
@@ -55,6 +55,7 @@
   - type: GunRequiresWield
   - type: StaticPrice
     price: 10000
+- type: FireOnLand # Harmony - DeltaV accidental discharge port
 
 - type: entity
   parent: [ BaseWeaponLauncher, BaseGunWieldable, BaseMajorContraband ]
