--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Pistols/pistols.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Pistols/pistols.yml
@@ -67,6 +67,7 @@
   - type: Appearance
   - type: StaticPrice
     price: 500
+- type: FireOnLand # Harmony - DeltaV accidental discharge port
 
 - type: entity
   name: viper
