--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Shotguns/shotguns.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Shotguns/shotguns.yml
@@ -150,6 +150,10 @@
     sprite: Objects/Weapons/Guns/Shotguns/enforcer_inhands_64x.rsi
   - type: BallisticAmmoProvider
   - type: GunRequiresWield #remove when inaccuracy on spreads is fixed
+# Harmony change start - DeltaV accidental discharge port
+- type: FireOnLand
+  probability: 0.05 # Did you know most shotguns aren't rated as drop safe? 
+# Harmony change end
 
 - type: entity
   parent: WeaponShotgunEnforcer
