--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/SMGs/smgs.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/SMGs/smgs.yml
@@ -147,7 +147,7 @@
       fireRate: 6
       burstFireRate: 18
       soundGunshot:
-        path: /Audio/Weapons/Guns/Gunshots/atreides.ogg
+        collection: DrozdFire # Harmony - changed sound path to sound collection
       selectedMode: Burst
       availableModes:
       - Burst
@@ -204,6 +204,10 @@
   - type: ChamberMagazineAmmoProvider
     boltClosed: null
   - type: Gun
+# Start harmony change - add sound to WT
+    soundGunshot:
+      collection: WTFire
+# End harmony change
     fireRate: 5.5
     minAngle: 1
     maxAngle: 6
