Comments like this instead

--- a/Resources/Prototypes/Roles/Jobs/CentComm/deathsquad.yml
+++ b/Resources/Prototypes/Roles/Jobs/CentComm/deathsquad.yml
@@ -35,6 +35,9 @@
     back:
     - WeaponPulsePistol
     # Harmony change start - Replaced Mateba with Wyvern
+#   - WeaponRevolverMatebaAP
+#   - SpeedLoaderMagnumAP
+#   - SpeedLoaderMagnumAP
     - WeaponPistolWyvern
     - MagazineMagnumAP
     - MagazineMagnumAP
