--- a/Resources/Prototypes/_Harmony/Catalog/uplink_catalog.yml
+++ b/Resources/Prototypes/_Harmony/Catalog/uplink_catalog.yml
@@ -71,7 +71,9 @@
   - !type:StoreWhitelistCondition
     whitelist:
       tags:
-      - NukeOpsUplink
+      - NukeOpsUplinkCommander
+  - !type:ListingLimitedStockCondition
+    stock: 1
 
 # Explosives
 
@@ -201,7 +203,9 @@
   - !type:StoreWhitelistCondition
     whitelist:
       tags:
-      - NukeOpsUplink
+      - NukeOpsUplinkCommander
+  - !type:ListingLimitedStockCondition
+    stock: 3
 
 # Chemicals
 
@@ -314,7 +318,9 @@
   - !type:StoreWhitelistCondition
     whitelist:
       tags:
-      - NukeOpsUplink
+      - NukeOpsUplinkCommander
+  - !type:ListingLimitedStockCondition
+    stock: 1
 
 # Pointless
 
