Removes wyvern + Renames Mateba to Anaconda + The gun no longer looks like bananium

--- a/Resources/Prototypes/Roles/Jobs/CentComm/deathsquad.yml
+++ b/Resources/Prototypes/Roles/Jobs/CentComm/deathsquad.yml
@@ -34,14 +34,9 @@
   storage:
     back:
     - WeaponPulsePistol
-    # Harmony change start - Replaced Mateba with Wyvern
-#   - WeaponRevolverMatebaAP
-#   - SpeedLoaderMagnumAP
-#   - SpeedLoaderMagnumAP
-    - WeaponPistolWyvern
-    - MagazineMagnumAP
-    - MagazineMagnumAP
-    # Harmony change end
+    - WeaponRevolverMatebaAP
+    - SpeedLoaderMagnumAP
+    - SpeedLoaderMagnumAP
     - BoxFlashbang
     - ToolDebug # spanish army knife
     - WelderExperimental
