--- a/Resources/Audio/_Harmony/Weapons/Guns/Gunshots/attributions.yml
+++ b/Resources/Audio/_Harmony/Weapons/Guns/Gunshots/attributions.yml
@@ -23,12 +23,12 @@
   copyright: "Halo © Microsoft Corporation. This audio file was created under Microsoft's Game Content Usage Rules using assets from Halo:Reach, and it is not endorsed by or affiliated with Microsoft. More info here: https://www.xbox.com/en-us/developers/rules. Pulled from Halo:Reach, made by Bungie"
   source: "https://youtu.be/0SEE9n-ciUc"
 
-- files: ["python_fire1.ogg", "python_fire2.ogg", "magnum_fire.ogg"]
+- files: ["python_fire1.ogg", "python_fire2.ogg"]
   license: "CC-BY-NC-4.0"
   copyright: "Created by Vunsunta"
   source: "https://www.dropbox.com/scl/fi/dd03xhdhwg9em8l1xyxtr/Vunsunta-Firearm-Sound-Pack-V2.zip?rlkey=p7cyhkgf462v2bikj8awjbugu&e=1&st=a38k4aqn&dl=0"
 
-- files: ["mateba_fire"]
+- files: ["anaconda_fire"]
   license: "CC-BY-SA-3.0"
   copyright: "Taken from RMC14"
   source: "https://github.com/RMC-14/RMC-14/commit/c22756bb39b97448e08fa89d36a7f4d89040507f"
