webedit ops - harmony suffix
Signed-off-by: halycon <104782767+kleinerstation13@users.noreply.github.com>

--- a/Resources/Prototypes/_Harmony/Entities/Objects/Specific/syndicate.yml
+++ b/Resources/Prototypes/_Harmony/Entities/Objects/Specific/syndicate.yml
@@ -1,7 +1,7 @@
 - type: entity
   parent: BaseUplinkRadio
   id: BaseUplinkRadio45TCCommander
-  suffix: 45 TC, NukeOps, Commander
+  suffix: 45 TC, NukeOps, Commander, Harmony
   components:
   - type: Store
     balance:
