webedit ops - suffix and order
Signed-off-by: halycon <104782767+kleinerstation13@users.noreply.github.com>

--- a/Resources/Prototypes/_Harmony/Entities/Objects/Weapons/Guns/Ammunition/SpeedLoaders/sniper.yml
+++ b/Resources/Prototypes/_Harmony/Entities/Objects/Weapons/Guns/Ammunition/SpeedLoaders/sniper.yml
@@ -1,8 +1,9 @@
 - type: entity
+  parent: [ BaseItem, BaseSyndicateContraband ]
   id: SpeedLoaderAnaconda
   name: speed loader (.60 anti-materiel)
+  suffix: Harmony
   description: You wonder why anybody would ever design such a thing.
-  parent: [ BaseItem, BaseSyndicateContraband ]
   components:
   - type: Tag
     tags:
