--- a/Resources/Prototypes/Recipes/Lathes/Packs/security.yml
+++ b/Resources/Prototypes/Recipes/Lathes/Packs/security.yml
@@ -105,29 +105,31 @@
   id: SecurityAmmo
   recipes:
   - BoxBeanbag
-  - BoxShotgunIncendiary
-  - BoxShotgunUranium
+# Start harmony change - Ammo rework - Remove uranium and incendiary ammo from lathe
+#  - BoxShotgunIncendiary
+#  - BoxShotgunUranium
   - BoxShellTranquilizer
-  - MagazineBoxLightRifleIncendiary
-  - MagazineBoxLightRifleUranium
-  - MagazineBoxMagnumIncendiary
-  - MagazineBoxMagnumUranium
-  - MagazineBoxPistolIncendiary
-  - MagazineBoxPistolUranium
-  - MagazineBoxRifleIncendiary
-  - MagazineBoxRifleUranium
-  - MagazineLightRifleIncendiary
-  - MagazineLightRifleUranium
-  - MagazinePistolIncendiary
-  - MagazinePistolUranium
-  - MagazinePistolSubMachineGunIncendiary
-  - MagazinePistolSubMachineGunUranium
-  - MagazineRifleIncendiary
-  - MagazineRifleUranium
+#  - MagazineBoxLightRifleIncendiary
+#  - MagazineBoxLightRifleUranium
+#  - MagazineBoxMagnumIncendiary
+#  - MagazineBoxMagnumUranium
+#  - MagazineBoxPistolIncendiary
+#  - MagazineBoxPistolUranium
+#  - MagazineBoxRifleIncendiary
+#  - MagazineBoxRifleUranium
+#  - MagazineLightRifleIncendiary
+#  - MagazineLightRifleUranium
+#  - MagazinePistolIncendiary
+#  - MagazinePistolUranium
+#  - MagazinePistolSubMachineGunIncendiary
+#  - MagazinePistolSubMachineGunUranium
+#  - MagazineRifleIncendiary
+#  - MagazineRifleUranium
   - MagazineShotgunBeanbag
-  - MagazineShotgunIncendiary
-  - SpeedLoaderMagnumIncendiary
-  - SpeedLoaderMagnumUranium
+#  - MagazineShotgunIncendiary
+#  - SpeedLoaderMagnumIncendiary
+#  - SpeedLoaderMagnumUranium
+# End harmony change
   - EnergyCarbineCartridgeUnstableHarmony # Harmony Change: Adds the unstable energy carbine cartridge to the security recipe pack
   - EnergyCarbineCartridgeXRayHarmony # Harmony Change: Adds the x-ray energy carbine cartridge to the security recipe pack
 # Start harmony change - Ammo rework - add unique ammo recipes to secfab and emagged lathe
