--- a/Resources/Prototypes/_Harmony/Entities/Objects/Weapons/Guns/Ammunition/Magazines/rifle.yml
+++ b/Resources/Prototypes/_Harmony/Entities/Objects/Weapons/Guns/Ammunition/Magazines/rifle.yml
@@ -31,7 +31,7 @@
   id: MagazineRifleFMJ
   name: magazine (.20 rifle jacketed)
   suffix: Harmony
-  description: 20-round double-stack magazine for rifles. Intended to hold hollowed ammunition meant for dispatching soft targets.
+  description: 20-round double-stack magazine for rifles. Intended to hold jacketed ammunition meant for dispatching armored targets.
   components:
   - type: BallisticAmmoProvider
     capacity: 20
